# access_kb

./: .ampy  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
.github/workflows/: periodic_build.yml
firmware/: build.json
firmware/patches/: animation.diff  eink_transparent.diff  generic_rotation.diff  il91874.diff  native_color_font.diff  print_no_console.diff  print_palette.diff  spi_comms.diff  xap_dynamic.diff  xap_keytester.diff
firmware/py-code/: main.py
hardware/gerbers/: gerbers.rar  kicad-B_Cu.gbl  kicad-B_Mask.gbs  kicad-B_Paste.gbp  kicad-B_Silkscreen.gbo  kicad-Edge_Cuts.gm1  kicad-F_Cu.gtl  kicad-F_Mask.gts  kicad-F_Paste.gtp  kicad-F_Silkscreen.gto  kicad-NPTH-drl_map.gbr  kicad-NPTH.drl  kicad-PTH-drl_map.gbr  kicad-PTH.drl
hardware/kicad/: kicad.kicad_pcb  kicad.kicad_pro  kicad.kicad_sch  kicad.kicad_sch-bak
hardware/libraries/: my_components.kicad_sym
helpers/: pdf.sh  pull.sh  push.sh
latex/: config.tex  main.tex  references.bib
latex/snippets/: .zshrc  CMakeLists.txt  Call.svelte  Cargo.toml  astro.config.mjs  astro.config.mjs2  broadcast.rs  keymap.c  main.rs  main.rs2  main.rs3  modusb_hid.c  mpconfigport.h  tauri.conf.json  upy-prompt  user.rs
latex/tex/: abstract.tex  acronyms.tex  firmware.tex  qmk.tex  (+12 more)
software/: astro.config.mjs  package-lock.json  package.json
software/src-tauri/: Cargo.toml  tauri.conf.json
software/src-tauri/src/: main.rs  util.rs  xap.rs
typst/: .typst_version  Makefile  bibliography.yml  bootstrap.typ  glossary.typ  main.typ  report.typ
utils/: download.sh  pdf.sh  rmswp.sh  upload.sh
(+266 files in other folders)
