[package]
name = "tauri-xap"
version = "0.0.0"
description = "App to communicate with the keyboard"
authors = ["elpekenin"]
license = ""
repository = "https://github.com/elpekenin/access_kb/tree/main/software"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
anyhow = "*"
env_logger = "0.9.1"
hidapi = { version = "1.4.2", features = [
    "linux-static-hidraw",
], default-features = false }
log = "0.4"
once_cell = "1.15.0"
rand = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
